# YOLOxBench

./: README.md  inference_on_video.py  label_checker.py  label_remapper.py  pyproject.toml  video_rectifier.py  video_visualizer.py
tests/: test_smoke.py
yoloxbench/: __init__.py  cfg.py  cli.py  exceptions.py  gui.py  utils.py
yoloxbench/adapters/: __init__.py  stub_future.py  ultralytics.py
yoloxbench/analysis/: advanced_compare.py
yoloxbench/data/: __init__.py  coco.py
yoloxbench/engine/: comparator.py  tester.py  trainer.py  validator.py  video.py
yoloxbench/gui/: label_viewer.py  video_gui.py
yoloxbench/metrics/: __init__.py  pr_curve.py
yoloxbench/plotting/: dashboard.py  plots.py
yoloxbench/reporting/: markdown_report.py
